--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- font 'Poppins' -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+  <!-- Home Page Styles CSS -->
   <link rel="stylesheet" href="./assets/css/home-page-styles.css">
-  <script src="./assets/scripts/script.js"></script>
+
   <title>Spider-Man | Multiversos</title>
 </head>
+
 <body>
   <nav class="s-menu">
     <ul>
@@ -18,7 +26,7 @@
         <a href="#">Tobey Maguire</a>
       </li>
       <li class="s-menu__item s-menu__icon">
-        <img src="./assets/images/icons/spider.svg" alt="Spider-Man Multiverse">
+        <img src="/assets/images/icons/spider.svg" alt="Spider-Man Logo">
       </li>
       <li class="s-menu__item">
         <a href="#">Tom Holland</a>
@@ -28,24 +36,28 @@
       </li>
     </ul>
   </nav>
+
   <div class="s-container">
-    <div class="s-cards-carousel" style="transform: translateZ(-40vw) rotateY(0deg);">
-      <a href="./pages/tobey-maguire/spiderman1.html" class="s-card" id="spider-man-01">
-        <img class="s-card__background" src="./assets/images/pic-sm-bg-01.jpg">
-        <img class="s-card__image" src="./assets/images/spider-man-01.png" alt="Tobey Maguire">
+    <div class="s-cards-carousel" style="transform: translateZ(-40vw) rotateY(0);">
+      <a href="#" class="s-card" id="spider-man-01">
+        <img class="s-card__background" src="/assets/images/pic-sm-bg-01.jpg">
+        <img class="s-card__imagem" src="/assets/images/spider-man-01.png" alt="Tobey Maguire">
         <h2 class="s-card__title">Tobey Maguire</h2>
       </a>
-      <a href="./pages/tom-holland/spiderman1.html" class="s-card" id="spider-man-02">
-        <img class="s-card__background" src="./assets/images/pic-sm-bg-02.jpg">
-        <img class="s-card__image" src="./assets/images/spider-man-02.png" alt="Tom Holland">
+
+      <a href="#" class="s-card" id="spider-man-02">
+        <img class="s-card__background" src="/assets/images/pic-sm-bg-02.jpg">
+        <img class="s-card__imagem" src="/assets/images/spider-man-02.png" alt="Tom Holland">
         <h2 class="s-card__title">Tom Holland</h2>
       </a>
-      <a href="./pages/andrew-garfield/spiderman1.html" class="s-card" id="spider-man-03">
-        <img class="s-card__background" src="./assets/images/pic-sm-bg-03.jpg">
-        <img class="s-card__image" src="./assets/images/spider-man-03.png" alt="Andrew Garfield">
+
+      <a href="#" class="s-card" id="spider-man-03">
+        <img class="s-card__background" src="/assets/images/pic-sm-bg-03.jpg">
+        <img class="s-card__imagem" src="/assets/images/spider-man-03.png" alt="Andrew Garfield">
         <h2 class="s-card__title">Andrew Garfield</h2>
       </a>
     </div>
+
   </div>
 
   <div class="s-controller">
@@ -55,10 +67,13 @@
     <div id="2" onclick="selectCarouselItem(this)" class="s-controller__button">
       02
     </div>
-    <div id="3" onclick="selectCarouselItem(this)" class="s-controller__button">
+    <div id="3" onclick="selectCarouselItem(this)"class="s-controller__button">
       03
     </div>
     <div class="s-controller__line"></div>
   </div>
+
+  <script src="/assets/scripts/script.js"></script>
 </body>
+
 </html>
